--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Ignore all
 *
 
+0x17-doubly_linked_lists/crackme4.pyc
+
 # Unignore all with extensions
 !*.*
 
 # Unignore all dirs
 !*/
+
+!0x17-doubly_linked_lists/100-password
